# charm

./: .gitignore  AUTHORS  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README.rst  TODO  VERSION  aclocal.m4  charm-tmpl.pc.in  config.h.in  configure  configure.ac  pyharm-parser.py  setup.py.in
bench/: Makefile.am  Makefile.in  bench.c  plot-bench.py  plot-memory.py
charm/: Makefile.am  Makefile.in
docs/: CNAME  Doxyfile  Makefile-sphinx  Makefile.am  Makefile.in  index.html
docs/src/: acknowledgements.rst  api-c-gfm.rst  api-c-glob.rst  api-c-mpi.rst  api-c.rst  api-py-gfm.rst  api-py-glob.rst  api-py-xnum.rst.bckp  api-py.rst  api.rst  benchmarks.rst  build-from-src-non-unix.rst  build-from-src-unix.rst  charm.rst  citing.rst  conf.py  cookbook-c.rst  cookbook-py.rst  cookbook.rst  definitions.rst  index.rst  install-pyharm-pip.rst  install.rst  install_non_unix.rst  install_unix.rst  introduction.rst  leg.rst  license.rst  modules.rst  platforms.rst  xnum.rst
src/crd/: Makefile.am  Makefile.in  crd.h.in  crd_cell_alloc.c  crd_cell_alloc.h  crd_cell_calloc.c  crd_cell_check_inputs.c  crd_cell_check_inputs.h  crd_cell_free.c  crd_cell_init.c  crd_cell_isGrid.c  crd_cell_isGrid.h  crd_cell_isSctr.c  crd_cell_isSctr.h  crd_cell_malloc.c  crd_check_cells.c  crd_check_cells.h  crd_dh1.c  crd_dh2.c  crd_dh_lats_weights.c  crd_dh_lats_weights.h  crd_free.c  crd_gl.c  crd_grd_check_symm.c  crd_grd_check_symm.h  crd_init.c  crd_isCell.c  crd_isCell.h  crd_isPoint.c  crd_isPoint.h  crd_point_alloc.c  crd_point_alloc.h  crd_point_calloc.c  crd_point_check_distribution.c  crd_point_check_distribution.h  crd_point_check_inputs.c  crd_point_check_inputs.h  crd_point_dh1.c  crd_point_dh1_chunk.c  crd_point_dh1_chunk.h  (+56 more)
src/err/: Makefile.am  Makefile.in  err.h.in  err_check_distribution.c  err_check_distribution.h  err_free.c  err_handler.c  err_inc_level.c  err_inc_level.h  err_init.c  err_is_null_ptr.c  err_is_null_ptr.h  err_isempty.c  err_isempty_all_mpi_processes.h  err_omp_mpi.c  err_omp_mpi.h  err_propagate.c  err_propagate.h  err_reset.c  err_set.c  err_set.h
src/gfm/: Makefile.am  Makefile.in  gfm.h.in  gfm_cap_density_3d.c  gfm_cap_density_3d_pywrap.c  gfm_cap_density_const.c  gfm_cap_density_const_pywrap.c  gfm_cap_density_lateral.c  gfm_cap_density_lateral_pywrap.c  gfm_cap_nq.c  gfm_cap_q.c  gfm_cap_q_aps.c  gfm_cap_q_aps.h  gfm_cap_q_check_prec.c  gfm_cap_q_check_prec_pywrap.c  gfm_cap_q_check_psi.c  gfm_cap_q_check_psi.h  gfm_cap_q_check_radius.c  gfm_cap_q_check_radius.h  gfm_cap_q_check_type.c  gfm_cap_q_check_type.h  gfm_cap_q_ddist.c  gfm_cap_q_ddist.h  gfm_cap_q_dkernel.c  gfm_cap_q_dkernel.h  gfm_cap_q_dnorm_dist.c  gfm_cap_q_dnorm_dist.h  gfm_cap_q_dr.c  gfm_cap_q_dr.h  gfm_cap_q_norm_dist.c  gfm_cap_q_norm_dist.h  gfm_cap_q_pywrap.c  gfm_cap_q_ref.c  gfm_cap_q_ref.h  gfm_cap_q_rpows.c  gfm_cap_q_rpows.h  gfm_cap_qu0.c  gfm_cap_qu0.h  gfm_cap_quu.c  gfm_cap_quu.h  (+9 more)
src/integ/: Makefile.am  Makefile.in  integ.h.in  integ_cc.c  integ_cc.h  integ_ccs.c  integ_ccs.h  integ_cs.c  integ_cs.h  integ_css.c  integ_css.h  integ_pn1m1pn2m2.c  integ_sc.c  integ_sc.h  integ_scs.c  integ_scs.h  integ_ss.c  integ_ss.h  integ_sss.c  integ_sss.h  integ_yi1n1m1yi2n2m2.c
src/leg/: Makefile.am  Makefile.in  leg.h.in  leg_func_anm_bnm.c  leg_func_anm_bnm.h  leg_func_dm.c  leg_func_dm.h  leg_func_enm.c  leg_func_enm.h  leg_func_gm_hm.c  leg_func_gm_hm.h  leg_func_prepare.c  leg_func_prepare.h  leg_func_r_ri.c  leg_func_r_ri.h  leg_func_use_xnum.c  leg_func_use_xnum.h  leg_func_xnum.h  leg_pnmj_alloc.c  leg_pnmj_alloc.h  leg_pnmj_calloc.c  leg_pnmj_check_ordering.c  leg_pnmj_check_ordering.h  leg_pnmj_coeffs.c  leg_pnmj_dpeven.c  leg_pnmj_dpeven.h  leg_pnmj_dpodd.c  leg_pnmj_dpodd.h  leg_pnmj_free.c  leg_pnmj_gpeven.c  leg_pnmj_gpeven.h  leg_pnmj_gpodd.c  leg_pnmj_gpodd.h  leg_pnmj_init.c  leg_pnmj_init.h  leg_pnmj_j2k.c  leg_pnmj_k2j.c  leg_pnmj_length.c  leg_pnmj_length.h  leg_pnmj_leq4.c  (+4 more)
src/misc/: Makefile.am  Makefile.in  misc.h.in  misc_arr_chck_lin_incr.c  misc_arr_chck_lin_incr.h  misc_arr_chck_symm.c  misc_arr_chck_symm.h  misc_arr_max.c  misc_arr_max.h  misc_arr_mean.c  misc_arr_mean.h  misc_arr_min.c  misc_arr_min.h  misc_arr_rms.c  misc_arr_rms.h  misc_arr_std.c  misc_arr_std.h  misc_buildopt.h  misc_buildopt_isfinite.c  misc_buildopt_mpfr.c  misc_buildopt_mpi.c  misc_buildopt_omp_charm.c  misc_buildopt_omp_fftw.c  misc_buildopt_precision.c  misc_buildopt_simd.c  misc_buildopt_simd_vector_size.c  misc_buildopt_version_fftw.c  misc_buildopt_version_gmp.c  misc_buildopt_version_mpfr.c  misc_buildopt_version_mpi.c  misc_calloc.c  misc_calloc.h  misc_check_radius.c  misc_check_radius.h  misc_fprintf_real.c  misc_fprintf_real.h  misc_get_version.c  misc_idx_4d.c  misc_idx_4d.h  misc_is_nearly_equal.c  (+15 more)
src/mpfr/: Makefile.am  Makefile.in  mpfr_binomial.c  mpfr_binomial.h  mpfr_check_bits.c  mpfr_check_bits.h  mpfr_double_fact.c  mpfr_double_fact.h  mpfr_fact.c  mpfr_fact.h  mpfr_flush_unreleased_memory.h  mpfr_get_real.h  mpfr_is_nearly_equal.c  mpfr_is_nearly_equal.h  mpfr_legendre.c  mpfr_legendre.h  mpfr_ndarray.h  (+7 more)
tests/: Makefile.am  Makefile.in  abs_r.c  abs_r.h  array2file.c  array2file.h  cell_touch_array_elements.c  cell_touch_array_elements.h  check_crd_cell_alloc.c  check_crd_cell_alloc.h  check_crd_cell_init.c  check_crd_cell_init.h  check_crd_point_alloc.c  check_crd_point_alloc.h  check_crd_point_init.c  check_crd_point_init.h  check_crd_point_quad.c  check_crd_point_quad.h  check_func.c  check_func.h  check_gfm_cap_density_3d.c  check_gfm_cap_density_const.c  check_gfm_cap_density_lateral.c  check_gfm_cap_q.c  check_gfm_cap_q.h  check_gfm_cap_q_check_prec.c  check_gfm_cap_q_check_prec.h  check_gfm_global_density_3d.c  check_gfm_global_density_const.c  check_gfm_global_density_lateral.c  check_gfm_sgfm_all.c.in  check_gfm_sgfm_all.h.in  check_integ_pn1m1pn2m2.c  check_integ_pn1m1pn2m2.h  check_integ_yi1n1m1yi2n2m2.c  check_integ_yi1n1m1yi2n2m2.h  check_leg_pnmj_alloc.c  check_leg_pnmj_alloc.h  check_leg_pnmj_coeffs.c  check_leg_pnmj_coeffs.h  (+156 more)
(+8874 files in other folders)
